--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@slippi/slippi-js": "^6.7.0",
+    "@supabase/supabase-js": "^2.38.5",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "1.4.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.10",
     "@types/node": "^20.9.0",
     "nodemon": "^3.0.1"
   }
